tests/success/default_value_int_variable.tig
let
	var a: int := f()
	function f(): int = a
in
	printi(a);
	print("\n")
end
