tests/fail/comment_not_ended_in_program.tig
let
    var s := "Hello, world!\n"
in
    /* This is a comment that begins here...
    print(s);
end
